--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
 
   <link rel="stylesheet" href="css/tufte.css">
   <link rel="stylesheet" href="css/main.css">
+
   <link rel="favicon" href="favicon.ico">
+  <link rel="shortcut icon" href="favicon.ico">
+  <link rel="icon" href="favicon.ico">
 </head>
 <body>
   <article>
