Remove broken links.

--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
       <h2>More details</h2>
 
       <p>
-        <a href="TBD">Our paper</a> contains a mathematical description of <span class="memorize">Memorize</span>,
+        Our paper contains a mathematical description of <span class="memorize">Memorize</span>,
         and several extensions:
       </p>
 
@@ -319,6 +319,7 @@
       </p>
     </section>
 
+    <!--
     <section>
       <h3>Source code</h3>
       <ul>
@@ -326,6 +327,7 @@
         <li><a href="https://github.com/Networks-Learning/Memorize-website"><i class="fa fa-github"></i>Networks-Learning/Memorize-website</a></li>
       </ul>
     </section>
+    -->
   </article>
 
   <script src="js/main.js"></script>
